fix(): double dominos in train were clipping and not displaying full text

--- a/ui/src/app/components/main/main.component.scss
+++ b/ui/src/app/components/main/main.component.scss
@@ -81,10 +81,6 @@
   grid-template-columns: auto minmax(0, 1fr);
 }
 
-.trains-dominos {
-  margin-top: 17px !important;
-}
-
 .log {
   white-space: pre-wrap;
   margin-left: 8px
@@ -102,4 +98,8 @@
 
 .checkbox {
   padding-top: 5px;
+}
+
+.single-train {
+  align-self: center;
 }
